Fixed the covers styles

--- a/src/styles/partials/_mainPage.scss
+++ b/src/styles/partials/_mainPage.scss
@@ -12,6 +12,7 @@
         justify-content: center;
         align-items: center;
         position: relative;
+        margin-bottom: 2em;
         .overlay {
             position: absolute;
             width: 100%;
